--- a/config/geodesign-game-configuraton-tool-main/Web App/templates/index.html
+++ b/config/geodesign-game-configuraton-tool-main/Web App/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css">
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <!-- Include the map.js file -->
-    <script src="map.js"></script>
+    <script src="{{ url_for('static', filename='js/map.js') }}"></script>
     
     <style>
         /* Body and general styles */
